[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 118.0
margin_top = 53.0
margin_right = 202.0
margin_bottom = 127.0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 22.0
text = "New Game"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 48.0
text = "Load Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 84.0
margin_bottom = 74.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
